--- a/index.html
+++ b/index.html
@@ -574,6 +574,13 @@
                     <div class="contact-links">
                         <b>Email : stellarx362@gmail.com</b>
                     </div>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <div class="challenge-item_1">
+                        <b>This website is developed with the assistance of AI</b>
+                    </div>
                     <!-- <div class="contact-links">
                         <a href="mailto:team@stellarx.space" class="btn btn--primary">Contact Team</a>
                         <a href="#" target="_blank" class="btn btn--outline">NASA Space Apps</a>
